MAN-27: Added delius links and fixed header alignment (#238)
* MAN-27: Added delius links and fixed header alignment

--- a/assets/scss/local.scss
+++ b/assets/scss/local.scss
@@ -17,6 +17,10 @@
   border-bottom: 1px solid #b1b4b6;
 }
 
+.govuk-action--bottom {
+  vertical-align: bottom;
+}
+
 .inline-list-from-tablet {
   > li {
     @include govuk-media-query($from: tablet) {
